# enviafib-api-interna/openapi/openapi.json
@@ -40,19 +40,19 @@
         "parameters" : [ {
           "name" : "inici",
           "in" : "query",
-          "description" : "Data d'inici, en format dd-MM-yyyy, a partir de la qual volem obtenir dades",
+          "description" : "Data d'inici, en format yyyy-MM-dd (ISO 8601), a partir de la qual volem obtenir dades",
           "schema" : {
             "type" : "string"
           },
-          "example" : "31-08-2022"
+          "example" : "2022-08-29"
         }, {
           "name" : "fi",
           "in" : "query",
-          "description" : "Data fi, en format dd-MM-yyyy, fins la qual volem tenir dades",
+          "description" : "Data fi, en format yyyy-MM-dd (ISO 8601), fins la qual volem tenir dades",
           "schema" : {
             "type" : "string"
           },
-          "example" : "31-12-2023"
+          "example" : "2023-12-31"
         }, {
           "name" : "page",
           "in" : "query",
@@ -172,16 +172,6 @@
           "example" : "ca"
         } ],
         "responses" : {
-          "400" : {
-            "description" : "EFIB: Parametres incorrectes",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "string"
-                }
-              }
-            }
-          },
           "401" : {
             "description" : "EFIB: No Autenticat",
             "content" : {
@@ -207,7 +197,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "type" : "string"
+                  "$ref" : "#/components/schemas/OpenApiExceptionInfo"
                 }
               }
             }
@@ -263,18 +253,32 @@
             "type" : "string"
           },
           "creada" : {
-            "type" : "string"
+            "pattern" : "yyyy-MM-dd'T'HH:mm:ss",
+            "type" : "string",
+            "format" : "date-time"
           },
           "finalitzada" : {
+            "pattern" : "yyyy-MM-dd'T'HH:mm:ss",
+            "type" : "string",
+            "format" : "date-time"
+          },
+          "idiomaCode" : {
             "type" : "string"
           },
-          "idioma" : {
+          "idiomaDescription" : {
             "type" : "string"
           },
-          "tipusDocumental" : {
+          "tipusDocumentalCode" : {
             "type" : "string"
           },
-          "tipus" : {
+          "tipusDocumentalDescription" : {
+            "type" : "string"
+          },
+          "tipusPeticioCode" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "tipusPeticioCodeDescription" : {
             "type" : "string"
           },
           "dir3" : {
